ipc/ipdl/test/ipdl/error/ManageeForgot.ipdl
//error: |manages| declaration in protocol `ForgottenManager' does not match any |manager| declaration in protocol `ManageeForgot'

include protocol ForgottenManager;

// See ForgottenManager. This includes ForgottenManager to ensure that
// loading this file fails.

[ChildProc=any]
protocol ManageeForgot {
child:
    async __delete__();
};
